# cli

./: .gitignore  Cargo.toml
src/: lib.rs  main.rs
template-src/: Cargo.toml
template-src/src/: main.js  main.rs  main.ts
