[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[package.metadata.rust-analyzer]
rustc_private = true

[[bin]]
name = "cli"
path = "src/main.rs"

[lib]
name = "cli_api"
path = "src/lib.rs"

[dependencies]
swc = "0.264.64"
swc_common = { version = "0.31.21", features = ["tty-emitter"] }
swc_ecma_ast = "0.107.7"
swc_ecma_parser = "0.137.15"
swc_ecma_transforms_typescript = "0.180.36"
swc_ecma_visit = "0.93.7"
